--- a/Tokenization.ipynb
+++ b/Tokenization.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMoiR2YSH1DUMkTuozY7XM5",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sahilmulla16/LLM-from-Scratch/blob/main/Tokenization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -219,12 +231,213 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "all_words = sorted(set(preprocessed))\n",
+        "print(len(all_words))\n"
+      ],
       "metadata": {
-        "id": "CuqsHAES0l0Y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CuqsHAES0l0Y",
+        "outputId": "34304275-a1c5-41d8-d690-6fe79c20a16b"
       },
-      "execution_count": null,
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9056\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab = {token:integer for integer, token in enumerate(all_words)}\n"
+      ],
+      "metadata": {
+        "id": "ApGhZ6q5_Fn7"
+      },
+      "execution_count": 58,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i , item in enumerate(vocab.items()):\n",
+        "  print(item)\n",
+        "  if i >= 50:\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XRK8yULG_XKO",
+        "outputId": "e5cf4def-6a82-4088-9728-76bce3a8e139"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('!', 0)\n",
+            "('\"', 1)\n",
+            "('\"-', 2)\n",
+            "('\"...', 3)\n",
+            "('\"...for', 4)\n",
+            "('\"0', 5)\n",
+            "('\"A', 6)\n",
+            "('\"AAAAAAAAAARGH', 7)\n",
+            "('\"AAAARGH', 8)\n",
+            "('\"ALL', 9)\n",
+            "('\"ARE', 10)\n",
+            "('\"Aaah', 11)\n",
+            "('\"Aargh', 12)\n",
+            "('\"Abbott', 13)\n",
+            "('\"Abou', 14)\n",
+            "('\"About', 15)\n",
+            "('\"Absolutely', 16)\n",
+            "('\"After', 17)\n",
+            "('\"Ah', 18)\n",
+            "('\"Aha', 19)\n",
+            "('\"Ahem', 20)\n",
+            "('\"Ahern', 21)\n",
+            "('\"Alas', 22)\n",
+            "('\"All', 23)\n",
+            "('\"Always', 24)\n",
+            "('\"Am', 25)\n",
+            "('\"An', 26)\n",
+            "('\"And', 27)\n",
+            "('\"Another', 28)\n",
+            "('\"Anyone', 29)\n",
+            "('\"Anything', 30)\n",
+            "('\"Anything.', 31)\n",
+            "('\"Anyway', 32)\n",
+            "('\"Are', 33)\n",
+            "('\"Aren', 34)\n",
+            "('\"As', 35)\n",
+            "('\"Asked', 36)\n",
+            "('\"At', 37)\n",
+            "('\"Ate', 38)\n",
+            "('\"B-b-but', 39)\n",
+            "('\"B-but', 40)\n",
+            "('\"Back', 41)\n",
+            "('\"Bad', 42)\n",
+            "('\"Barking', 43)\n",
+            "('\"Be', 44)\n",
+            "('\"Because', 45)\n",
+            "('\"Best', 46)\n",
+            "('\"Bet', 47)\n",
+            "('\"Better', 48)\n",
+            "('\"Bin', 49)\n",
+            "('\"Blasted', 50)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Simpletokenizer:\n",
+        "  def __init__(self , vocab):\n",
+        "    self.str_to_int = vocab\n",
+        "    self.int_to_str = {i:s for s in vocab.items}\n",
+        "\n",
+        "  def encode(self , text):\n",
+        "    preprocessed = re.split(r'([.,?!():\";\\']|--|\\s)' , text)\n",
+        "\n",
+        "    preprocessed = [\n",
+        "        item.strip() for item in preprocessed if item.strip()\n",
+        "    ]\n",
+        "    ids = [self.str_to_int[s] for s in preprocessed]\n",
+        "    return ids\n",
+        "\n",
+        "\n",
+        "  def decode(self , ids):\n",
+        "    text = \" \".join([self.int_to_str[i] for i in ids])\n",
+        "    # replace spaces before the specified punctuation\n",
+        "    text = re.sub(r'\\s+([.,!?()\"\\'])', r'\\1', text)\n",
+        "    return text\n"
+      ],
+      "metadata": {
+        "id": "rheR3cjp_7p1"
+      },
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Testing the tokenizer\n"
+      ],
+      "metadata": {
+        "id": "al1_3_KFLs2Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = Simpletokenizer(vocab)\n",
+        "\n",
+        "text = \"\"\"  was the director of a firm called Grunnings, which made\n",
+        "            drills. He was a big, beefy man with hardly any neck, although he did\n",
+        "            have a very large mustache.\"\"\"\n",
+        "\n",
+        "ids = tokenizer.encode(text)\n",
+        "print(ids)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pDJeX6pfL0LW",
+        "outputId": "5df9cd65-2065-4d36-878b-803755667022"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[8699, 8105, 3554, 6000, 1994, 4137, 2825, 1108, 579, 8798, 5538, 3697, 602, 1157, 8699, 1994, 2495, 579, 2428, 5556, 8897, 4733, 2168, 5863, 579, 2112, 4760, 3518, 4751, 1994, 8607, 5275, 5810, 602]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer.decode(ids)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "juYcC1U6PD_p",
+        "outputId": "10b50d42-bbb7-494d-dbf4-c82f0c8776d5"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'was the director of a firm called Grunnings, which made drills. He was a big, beefy man with hardly any neck, although he did have a very large mustache.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
     }
   ]
 }
