--- a/Tokenization.ipynb
+++ b/Tokenization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMoiR2YSH1DUMkTuozY7XM5",
+      "authorship_tag": "ABX9TyM0FiehCwF2C19g57JdX6j9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -436,6 +436,65 @@
           },
           "metadata": {},
           "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer.encode(text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wJI_z8C2QOPA",
+        "outputId": "17d4d81d-0716-4452-c1ff-11484be8b730"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[8699,\n",
+              " 8105,\n",
+              " 3554,\n",
+              " 6000,\n",
+              " 1994,\n",
+              " 4137,\n",
+              " 2825,\n",
+              " 1108,\n",
+              " 579,\n",
+              " 8798,\n",
+              " 5538,\n",
+              " 3697,\n",
+              " 602,\n",
+              " 1157,\n",
+              " 8699,\n",
+              " 1994,\n",
+              " 2495,\n",
+              " 579,\n",
+              " 2428,\n",
+              " 5556,\n",
+              " 8897,\n",
+              " 4733,\n",
+              " 2168,\n",
+              " 5863,\n",
+              " 579,\n",
+              " 2112,\n",
+              " 4760,\n",
+              " 3518,\n",
+              " 4751,\n",
+              " 1994,\n",
+              " 8607,\n",
+              " 5275,\n",
+              " 5810,\n",
+              " 602]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
         }
       ]
     }
