Added Specialized tokens

--- a/Tokenization.ipynb
+++ b/Tokenization.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM0FiehCwF2C19g57JdX6j9",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMrnyYlQPvtGlqmVO6lZqT8"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sahilmulla16/LLM-from-Scratch/blob/main/Tokenization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -50,9 +39,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYtIoOtoedsB",
-        "outputId": "0b24c1f2-a216-455b-98ed-9a01300308b4"
+        "outputId": "b4d1e6f1-86f3-4e60-f07c-b3b14aa68e7c"
       },
-      "execution_count": 56,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,9 +70,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YJtUT4X6gRZo",
-        "outputId": "3ac6aac6-dd5d-4589-e42d-b0fbc50b0c3e"
+        "outputId": "82984103-54c8-4d9d-8cfa-f5490e068661"
       },
-      "execution_count": 19,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a1Aeivirh3-k",
-        "outputId": "15a8c30c-b92e-4e68-99d8-e29ff9f22823"
+        "outputId": "71d89c07-fa53-44b1-d7da-1d5c1dfd737f"
       },
-      "execution_count": 33,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +118,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sjdexUBMjg4S",
-        "outputId": "73005202-e65b-4cfe-fa67-6ad2525a177c"
+        "outputId": "0c5963f6-e596-48ea-b97b-13f574f61fdc"
       },
       "execution_count": 35,
       "outputs": [
@@ -156,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lR-7pU3DwTf5",
-        "outputId": "73ad2f48-0f0b-4b3a-ed6d-18ee899950f4"
+        "outputId": "1140f824-5c21-4a2b-8ab8-4dc655a32540"
       },
-      "execution_count": 51,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,9 +170,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ieo8enznzTu9",
-        "outputId": "4285f754-d1ce-4db6-a773-21a9924539be"
+        "outputId": "76d271f4-4485-4523-b564-0b55ee0cbd11"
       },
-      "execution_count": 54,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,9 +193,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4w_kOq8Oz0fP",
-        "outputId": "d859c6cc-2c90-499d-cdbd-dfc9964f7d31"
+        "outputId": "5b1aa54e-94bc-490f-dd1a-1b4909d39365"
       },
-      "execution_count": 55,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,9 +229,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CuqsHAES0l0Y",
-        "outputId": "34304275-a1c5-41d8-d690-6fe79c20a16b"
+        "outputId": "501690cc-ef1a-430f-871f-0058722ce59e"
       },
-      "execution_count": 57,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +250,7 @@
       "metadata": {
         "id": "ApGhZ6q5_Fn7"
       },
-      "execution_count": 58,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -277,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XRK8yULG_XKO",
-        "outputId": "e5cf4def-6a82-4088-9728-76bce3a8e139"
+        "outputId": "eb123d30-7115-48e6-ce6d-d5c4862ff517"
       },
-      "execution_count": 64,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,31 +332,30 @@
     {
       "cell_type": "code",
       "source": [
-        "class Simpletokenizer:\n",
-        "  def __init__(self , vocab):\n",
-        "    self.str_to_int = vocab\n",
-        "    self.int_to_str = {i:s for s in vocab.items}\n",
+        "class SimpleTokenizerV1:\n",
+        "    def __init__(self, vocab):\n",
+        "        self.str_to_int = vocab\n",
+        "        self.int_to_str = {i:s for s,i in vocab.items()}\n",
         "\n",
-        "  def encode(self , text):\n",
-        "    preprocessed = re.split(r'([.,?!():\";\\']|--|\\s)' , text)\n",
+        "    def encode(self, text):\n",
+        "        preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)\n",
         "\n",
-        "    preprocessed = [\n",
-        "        item.strip() for item in preprocessed if item.strip()\n",
-        "    ]\n",
-        "    ids = [self.str_to_int[s] for s in preprocessed]\n",
-        "    return ids\n",
+        "        preprocessed = [\n",
+        "            item.strip() for item in preprocessed if item.strip()\n",
+        "        ]\n",
+        "        ids = [self.str_to_int[s] for s in preprocessed]\n",
+        "        return ids\n",
         "\n",
-        "\n",
-        "  def decode(self , ids):\n",
-        "    text = \" \".join([self.int_to_str[i] for i in ids])\n",
-        "    # replace spaces before the specified punctuation\n",
-        "    text = re.sub(r'\\s+([.,!?()\"\\'])', r'\\1', text)\n",
-        "    return text\n"
+        "    def decode(self, ids):\n",
+        "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
+        "        # Replace spaces before the specified punctuations\n",
+        "        text = re.sub(r'\\s+([,.?!\"()\\'])', r'\\1', text)\n",
+        "        return text"
       ],
       "metadata": {
         "id": "rheR3cjp_7p1"
       },
-      "execution_count": 99,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -382,11 +370,9 @@
     {
       "cell_type": "code",
       "source": [
-        "tokenizer = Simpletokenizer(vocab)\n",
+        "tokenizer = SimpleTokenizerV1(vocab)\n",
         "\n",
-        "text = \"\"\"  was the director of a firm called Grunnings, which made\n",
-        "            drills. He was a big, beefy man with hardly any neck, although he did\n",
-        "            have a very large mustache.\"\"\"\n",
+        "text = \"THE BOY WHO LIVED\"\n",
         "\n",
         "ids = tokenizer.encode(text)\n",
         "print(ids)\n"
@@ -396,15 +382,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pDJeX6pfL0LW",
-        "outputId": "5df9cd65-2065-4d36-878b-803755667022"
+        "outputId": "a9380fc9-8445-4c32-9681-7ee858dd69b6"
       },
-      "execution_count": 109,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[8699, 8105, 3554, 6000, 1994, 4137, 2825, 1108, 579, 8798, 5538, 3697, 602, 1157, 8699, 1994, 2495, 579, 2428, 5556, 8897, 4733, 2168, 5863, 579, 2112, 4760, 3518, 4751, 1994, 8607, 5275, 5810, 602]\n"
+            "[1775, 695, 1899, 1273]\n"
           ]
         }
       ]
@@ -417,84 +403,253 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 35
         },
         "id": "juYcC1U6PD_p",
-        "outputId": "10b50d42-bbb7-494d-dbf4-c82f0c8776d5"
+        "outputId": "c42cc91f-5617-414e-a0ee-9f3a18377a97"
       },
-      "execution_count": 110,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'was the director of a firm called Grunnings, which made drills. He was a big, beefy man with hardly any neck, although he did have a very large mustache.'"
+              "'THE BOY WHO LIVED'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 110
+          "execution_count": 59
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "tokenizer.encode(text)"
+        "text = \"Hello , do you like tea\"\n",
+        "result = tokenizer.encode(text)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        },
+        "id": "wJI_z8C2QOPA",
+        "outputId": "30a9f9e3-513e-4a58-a6ca-a973c7fe744d"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "'Hello'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3456208988.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Hello , do you like tea\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1902381733.py\u001b[0m in \u001b[0;36mencode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         ]\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'Hello'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Adding Special Context Tokens\n",
+        "\n",
+        "> Reason because of the key error getting due to the new words.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "e8JhZ7X0w11x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "all_token = sorted(list(set(preprocessed)))\n",
+        "all_token.extend([\"<|unk|>\",\"<|endoftext|>\"])\n",
+        "\n",
+        "vocab = {token:integer for integer, token in enumerate(all_token)}"
+      ],
+      "metadata": {
+        "id": "uTbSYuovRsm7"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(vocab.items())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wJI_z8C2QOPA",
-        "outputId": "17d4d81d-0716-4452-c1ff-11484be8b730"
+        "id": "spfbWUP70AjD",
+        "outputId": "2c3b7682-333c-4a46-f2a9-8ac9d001a99c"
       },
-      "execution_count": 111,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[8699,\n",
-              " 8105,\n",
-              " 3554,\n",
-              " 6000,\n",
-              " 1994,\n",
-              " 4137,\n",
-              " 2825,\n",
-              " 1108,\n",
-              " 579,\n",
-              " 8798,\n",
-              " 5538,\n",
-              " 3697,\n",
-              " 602,\n",
-              " 1157,\n",
-              " 8699,\n",
-              " 1994,\n",
-              " 2495,\n",
-              " 579,\n",
-              " 2428,\n",
-              " 5556,\n",
-              " 8897,\n",
-              " 4733,\n",
-              " 2168,\n",
-              " 5863,\n",
-              " 579,\n",
-              " 2112,\n",
-              " 4760,\n",
-              " 3518,\n",
-              " 4751,\n",
-              " 1994,\n",
-              " 8607,\n",
-              " 5275,\n",
-              " 5810,\n",
-              " 602]"
+              "9058"
             ]
           },
           "metadata": {},
-          "execution_count": 111
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i ,item in  enumerate(list(vocab.items())[-5:]):\n",
+        "  print(item)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8GHe-5_500GK",
+        "outputId": "37261a14-6190-44c4-d00c-f5760b62b0b8"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('zoom', 9053)\n",
+            "('zoomed', 9054)\n",
+            "('zooming', 9055)\n",
+            "('<|unk|>', 9056)\n",
+            "('<|endoftext|>', 9057)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SimpleTokenizerV2:\n",
+        "    def __init__(self, vocab):\n",
+        "        self.str_to_int = vocab\n",
+        "        self.int_to_str = {i:s for s,i in vocab.items()}\n",
+        "\n",
+        "    def encode(self, text):\n",
+        "        preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)\n",
+        "\n",
+        "        preprocessed = [\n",
+        "            item.strip() for item in preprocessed if item.strip()\n",
+        "        ]\n",
+        "        # added this to replace the new text or unkown text with this <|unk|>\n",
+        "        preprocessed = [\n",
+        "            item if item in self.str_to_int\n",
+        "            else \"<|unk|>\" for item in preprocessed\n",
+        "        ]\n",
+        "        ids = [self.str_to_int[s] for s in preprocessed]\n",
+        "        return ids\n",
+        "\n",
+        "    def decode(self, ids):\n",
+        "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
+        "        # Replace spaces before the specified punctuations\n",
+        "        text = re.sub(r'\\s+([,.?!\"()\\'])', r'\\1', text)\n",
+        "        return text"
+      ],
+      "metadata": {
+        "id": "dbbYM5zk3gZL"
+      },
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = SimpleTokenizerV2(vocab)\n",
+        "\n",
+        "text1 = \"Hello do you like tea?\"\n",
+        "text2 = \"anything else you need while having tea \"\n",
+        "\n",
+        "text = \" <|endoftext|> \".join((text1,text2))\n",
+        "print(text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K2JNpIKv6F_9",
+        "outputId": "9e012c18-a182-49a1-cfd3-24f686ae7c3f"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello do you like tea? <|endoftext|> anything else you need while having tea \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "encoded = tokenizer.encode(text)\n",
+        "print(encoded)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2zhdCq3_6rLG",
+        "outputId": "29b6ffcd-1185-4cfd-d31f-ede3269d18ae"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[9056, 3597, 9031, 5399, 8030, 625, 9057, 2175, 3830, 9031, 5867, 8800, 4756, 8030]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer.decode(encoded)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "kihyy8rR6uf2",
+        "outputId": "05e781b9-940b-4688-dac1-210fd4ca9386"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'<|unk|> do you like tea? <|endoftext|> anything else you need while having tea'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 89
         }
       ]
     }
