Added BYTE PAIR ENCODING

--- a/Tokenization.ipynb
+++ b/Tokenization.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMrnyYlQPvtGlqmVO6lZqT8"
+      "authorship_tag": "ABX9TyOOg1Co5s1JtSlfuVm9sc+g",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sahilmulla16/LLM-from-Scratch/blob/main/Tokenization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -650,6 +661,171 @@
           },
           "metadata": {},
           "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **BYTE Pair Encoding (BPE)**"
+      ],
+      "metadata": {
+        "id": "jJMn7dpQ_9tp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! pip3 install tiktoken\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FXH7Z08gAHYJ",
+        "outputId": "50a2a954-2ccd-40e1-cbb8-bad4f9336920"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: tiktoken in /usr/local/lib/python3.12/dist-packages (0.11.0)\n",
+            "Requirement already satisfied: regex>=2022.1.18 in /usr/local/lib/python3.12/dist-packages (from tiktoken) (2024.11.6)\n",
+            "Requirement already satisfied: requests>=2.26.0 in /usr/local/lib/python3.12/dist-packages (from tiktoken) (2.32.4)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.26.0->tiktoken) (3.4.3)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests>=2.26.0->tiktoken) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests>=2.26.0->tiktoken) (2.5.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests>=2.26.0->tiktoken) (2025.8.3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tiktoken\n",
+        "import importlib\n",
+        "\n",
+        "print(\"Tiktoken Version : \" , importlib.metadata.version('tiktoken'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k-o9QSFs48D3",
+        "outputId": "f19060e0-e93a-4427-fa08-5e6a495ff3d2"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tiktoken Version :  0.11.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = tiktoken.get_encoding('gpt2')"
+      ],
+      "metadata": {
+        "id": "Jw2Gix6L5az7"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This encoder is similar to the **SimpleTokenizerV2**"
+      ],
+      "metadata": {
+        "id": "XWciGlhJ5xw1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = (\n",
+        "    \"Hello, How Are you doing today? <|endoftext|> Where you will head nextfromhere\"\n",
+        ")\n",
+        "\n",
+        "ids = tokenizer.encode(text , allowed_special={\"<|endoftext|>\"})\n",
+        "print(ids)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UQdgO1jl5wvK",
+        "outputId": "0c7c0be0-172e-4e9d-e255-27e87893047e"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[15496, 11, 1374, 4231, 345, 1804, 1909, 30, 220, 50256, 6350, 345, 481, 1182, 1306, 6738, 1456]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strings = tokenizer.decode(ids)\n",
+        "print(strings)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rwGpVJl37x0X",
+        "outputId": "adf946a3-23b2-46ad-d969-2a48dbbbedec"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, How Are you doing today? <|endoftext|> Where you will head nextfromhere\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name= \"sahil\"\n",
+        "integers = tokenizer.encode(f\"HEllo , boss {name} what -- are you doing here? \")\n",
+        "print(integers)\n",
+        "\n",
+        "str = tokenizer.decode(integers)\n",
+        "print(str)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bJaNzk1Q9R7T",
+        "outputId": "8c9ad1f6-fefb-44de-c177-dc534d73f3d9"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[13909, 18798, 837, 6478, 473, 71, 346, 644, 1377, 389, 345, 1804, 994, 30, 220]\n",
+            "HEllo , boss sahil what -- are you doing here? \n"
+          ]
         }
       ]
     }
